k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mwalimu-school
  labels:
    name: mwalimu-school
    environment: production
